RESOLVED FIXED45980
userscripts/user-script-*-document.html tests are flaky on Windows
https://bugs.webkit.org/show_bug.cgi?id=45980
Summary userscripts/user-script-*-document.html tests are flaky on Windows
Brian Weinstein
Reported 2010-09-17 11:22:59 PDT
userscripts/user-script-video-document.html userscripts/user-script-audio-document.html userscripts/user-script-plugin-document.html seem to be flaky on Windows (sometimes they crash or hit ASSERTs, sometimes they print out the wrong results). This is strange, because having tested them in browser, we do get the correct behavior.
Attachments
[PATCH] Fix for plugin documents (2.70 KB, patch)
2010-10-28 16:37 PDT, Brian Weinstein
no flags
[PATCH] Fix for video documents (51.51 KB, patch)
2010-11-05 10:48 PDT, Brian Weinstein
eric.carlson: review+
bweinstein: commit-queue-
Brian Weinstein
Comment 1 2010-09-17 11:35:09 PDT
Skipped the tests in r67729.
Brian Weinstein
Comment 2 2010-09-17 11:41:10 PDT
Brian Weinstein
Comment 3 2010-10-28 16:37:57 PDT
Created attachment 72257 [details] [PATCH] Fix for plugin documents
Brian Weinstein
Comment 4 2010-10-28 16:45:19 PDT
Landed fix for plugin documents in r70825.
Brian Weinstein
Comment 5 2010-10-28 16:45:36 PDT
Comment on attachment 72257 [details] [PATCH] Fix for plugin documents Clearing review flags.
WebKit Review Bot
Comment 6 2010-10-28 18:04:39 PDT
http://trac.webkit.org/changeset/70825 might have broken GTK Linux 64-bit Debug The following tests are not passing: media/video-seek-by-small-increment.html
Brian Weinstein
Comment 7 2010-11-05 10:48:15 PDT
Created attachment 73083 [details] [PATCH] Fix for video documents
Eric Carlson
Comment 8 2010-11-05 10:52:44 PDT
Comment on attachment 73083 [details] [PATCH] Fix for video documents r=me
Brian Weinstein
Comment 9 2010-11-05 11:03:13 PDT
Landed fix for video documents in r71433. I'm closing out this bug, because the only user-script-*-document test that is flaky is user-script-plugin-document - and that is being tracked by: https://bugs.webkit.org/show_bug.cgi?id=48751.
Note You need to log in before you can comment on or make changes to this bug.