Part of <https://bugs.webkit.org/show_bug.cgi?id=45980> userscripts/user-script-*-document.html tests are flaky on Windows

Reviewed by Brady Eidson.

WebCore:

In WebFrameLoaderClient::committedLoad on Windows, we call through to PluginStream::didRecieveData
if our manual loader is a plugin stream, and we can call didRecieveData with a 0 length.

We shouldn't ASSERT that length is 0, because code paths exists where we call it with a 0 length.

This is tested by re-enabling user-script-plugin-document.html on Windows.

* plugins/PluginStream.cpp:
(WebCore::PluginStream::didReceiveData):

LayoutTests:

Unskip the user-script-plugin-document test because its issue is fixed.

* platform/win/Skipped:



Canonical link: https://commits.webkit.org/61336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70825 268f45cc-cd09-0410-ab3c-d52691b4dbfc